Added Web-socket and socket.io and message passing from frontend and backend and also tets this with postman & postwoman
