# src/swagger/api.json
@@ -175,7 +175,9 @@
             "$ref": "#/components/responses/InternalServerError"
           }
         }
-      },
+      }
+    },
+    "/create/users": {
       "post": {
         "summary": "Create a new user",
         "security": [
